--- a/geral.css
+++ b/geral.css
@@ -1,1 +1,25 @@
+.calculadora {
+    background-color: rgb(87, 87, 87);
+    width: 200px;
+    padding: 20px;
+    
+}
+#btnCalc {
+    background: rgb(250, 184, 2);
+    color:white;
+    margin: 10px;
+    padding: 5px;
+}
+#btnCalc:hover{
+    background: rgb(201, 140, 230);
+    color:rgb(0, 0, 0);
+    cursor: pointer;
+}
+#total {
+    padding: 5px;
+    margin: 5px;
+    background:rgb(250, 184, 2);
+    color:rgb(255, 255, 254);
+}
+
 
