--- a/geral.css
+++ b/geral.css
@@ -1,25 +1,46 @@
-.calculadora {
-    background-color: rgb(87, 87, 87);
+.calculadora{
+    background: rgb(93, 94, 94);
     width: 200px;
     padding: 20px;
-    
+    border-radius: 5px;
+    box-shadow: 10px 10px rgb(0, 0, 0);
+    text-align: center;
 }
-#btnCalc {
-    background: rgb(250, 184, 2);
-    color:white;
-    margin: 10px;
-    padding: 5px;
-}
-#btnCalc:hover{
-    background: rgb(201, 140, 230);
-    color:rgb(0, 0, 0);
-    cursor: pointer;
-}
-#total {
-    padding: 5px;
-    margin: 5px;
-    background:rgb(250, 184, 2);
-    color:rgb(255, 255, 254);
+.calculadora input{
+border-radius: 10px;
+border: none;
+padding: 10px;
+background: rgb(255, 193, 23);
+color: white;
+
 }
 
+.calculadora input:focus{
+background: rgb(255, 255, 255);
+color: rgb(0, 0, 0);
+
+}
+
+.spTotal{
+    background: rgb(255, 193, 23);
+    border-radius: 10px;
+    padding: 10px;
+    color:rgb(0, 0, 0);
+    margin-bottom: 10px;
+}
+
+#btnCalc {
+    background: rgb(255, 193, 23);
+    color: rgb(0, 0, 0);
+    margin: 20px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+#btnCalc:hover{
+    background: rgb(0, 0, 0);
+    color: rgb(255, 193, 23);
+    cursor: pointer;
+
+}
 
